# cat-feeder

./: .gitmodules  Cargo.toml  Readme.md  build-arm.sh  build-armv7.sh  build.rs  build_env.sh  cat-feeder.service  cat-feeder.toml
arm-udev/usr/lib/arm-linux-gnueabihf/pkgconfig/: libudev.pc
motor_controller/: Cargo.toml
motor_controller/examples/: run_stepper.rs
motor_controller/src/: dc_motor.rs  lib.rs  stepper.rs
pca9685_pwc/: Cargo.toml  Readme.md
pca9685_pwc/src/: dc_motor.rs  error.rs  pca9685_pwc.rs
rascam/src/: lib.rs
src/: assets.rs  camera.rs  config.rs  distance.rs  http.rs  http_utils.rs  main.rs  motor.rs  result.rs  rfid_reader.rs  state.rs  utils.rs
src/http/: helpers.rs  service.rs
templates/: hello.html  layout.html  picture.html
