[package]
name = "hyper-play"
version = "0.1.0"
authors = ["Robbie Lamb <lamb@eccentriclamb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8.0"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "0.13.0"
log = "0.4"
pretty_env_logger = "0.3.1"
tokio = { version = "^0.2.0", features = ["full"]}
