[package]
name = "hyper-play"
version = "0.1.0"
authors = ["Robbie Lamb <lamb@eccentriclamb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8.0"
bytes = "0.5"
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
http = "^0.2.0"
hyper = "^0.13.1"
log = "0.4"
pretty_env_logger = "0.3.1"
rascam = "0.0.2"
#rascam = { git = "https://github.com/pedrosland/rascam" }
rust-embed = { version = "^5.2.0", features = ["debug-embed"] }
tokio = { version = "^0.2.5", features = ["full"]}
tokio-serial = "4.3.3"
tokio-util = { version = "0.2.0", features = ["codec"], default-features = false }
url = "1.0"

[workspace]
members = ["mmal-sys", "rascam"]

[patch.crates-io]
mmal-sys = { path="./mmal-sys" }
rascam = { path="./rascam" }

[profile.release]
lto = true # enable link time optomizations 
