[package]
name = "pca9685_pwc"
version = "0.1.0"
authors = ["Robbie Lamb <lamb@eccentriclamb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "^0.11"
log = "^0.4"

[dev-dependencies]
simple-signal = "1.1.1"
